--- a/Part 4/app/templates/layout.html
+++ b/Part 4/app/templates/layout.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Database Project</title>
+    <title>Database App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <main>
-        <h1>Welcome to My Website</h1>
-    </main>
-	<script src="index.js"></script>
+    {%block content%}{%endblock%}
+	<script src="{{url_for('static', filename='main.js')}}"></script>
   </body>
 </html>
