Redirect after database validation update

--- a/Part 4/app/templates/index.html
+++ b/Part 4/app/templates/index.html
@@ -3,6 +3,6 @@
 <form action="/api/database" method="POST">
     <label for="database">Please input database name: </label>
     <input name="database" type="text">
-    <input type="submit" value="submit">
+    <input type="submit" value="Connect">
 </form>
 {% endblock %}
