--- a/Part 4/app/templates/layout.html
+++ b/Part 4/app/templates/layout.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
+    <h1>Project Database</h1>
+    <p>Welcome to Project Database, please follow the directions listed below:</p>
     {%block content%}{%endblock%}
 	<script src="{{url_for('static', filename='main.js')}}"></script>
   </body>
