Query page setup, logout button added.

--- a/Part 4/app/templates/index.html
+++ b/Part 4/app/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
+<p>Welcome to Project Database, please follow the directions listed below:</p>
 <form action="/api/database" method="POST">
     <label for="database">Please input database name: </label>
     <input name="database" type="text">
