--- a/Part 4/app/templates/display_all.html
+++ b/Part 4/app/templates/display_all.html
@@ -4,9 +4,6 @@
 	<title>Display Data</title>
 </head>
 <body>
-	<h1>Display Data</h1>
-	<button onclick="displayData()">Display</button>
-
 	<script>
 		function displayData() {
 			var new_database = "{{ database }}";
@@ -16,24 +13,36 @@
 				.then(data => {
 					console.log(data);
 					var table = "<table>";
-					table += "<tr>";
-					for (var i = 0; i < Object.keys(data[0]).length; i++) {
-						table += "<th>" + Object.keys(data[0])[i] + "</th>";
-					}
-					table += "</tr>";
-					for (var i = 0; i < data.length; i++) {
 						table += "<tr>";
-						for (var j = 0; j < Object.keys(data[i]).length; j++) {
-							table += "<td>" + data[i][Object.keys(data[i])[j]] + "</td>";
-						}
-						table += "</tr>";
-					}
-					table += "</table>";
+							for (var i = 0; i < Object.keys(data[0]).length; i++) {
+								table += "<th>" + Object.keys(data[0])[i] + "</th>";
+							}
+							// Add a new column header for the links
+							table += "<th>Details</th>";
+							table += "</tr>";
+							
+							for (var i = 0; i < data.length; i++) {
+								table += "<tr>";
+								for (var j = 0; j < Object.keys(data[i]).length; j++) {
+									table += "<td>" + data[i][Object.keys(data[i])[j]] + "</td>";
+								}
+								// Add a new column for links in each row
+								table += "<td><a href='/details?modelNo=" + data[i]['modelNo'] + "'>Details</a></td>";
+								table += "</tr>";
+							}
+							
+					
+					
+					
+					
+					
 					document.getElementById("data").innerHTML = table;
 				});
 		}
+	
+		displayData();
 	</script>
-
+	
 	<div id="data"></div>
 
 </body>
