--- a/Part 4/app/templates/detail.html
+++ b/Part 4/app/templates/detail.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Model Details</title>
-</head>
-<body>
-    <h1>Model Details</h1>
+{% extends 'layout.html' %}
+{% block content %}
     <table>
         <tr>
             <th>Serial Number</th>
@@ -22,5 +17,5 @@
             {% endfor %}
         </tr>
     </table>
-</body>
-</html>
+{% endblock %}
+
