--- a/Part 4/app/templates/display_all.html
+++ b/Part 4/app/templates/display_all.html
@@ -52,4 +52,12 @@
 	</script>
 	
 	<div id="data"></div>
+	
+	<div style="text-align:center; background-color: transparent !important;">
+		<form action="{{ url_for('logout') }}" method="POST" style="display:inline-block; background-color: transparent;box-shadow: none;">
+			<input type="hidden" name="database" value="{{ database }}">
+			<button type="submit" class="logout-btn">Logout</button>
+		  </form>
+	</div>
+	
 {% endblock %}
