--- a/Part 4/app/templates/layout.html
+++ b/Part 4/app/templates/layout.html
@@ -12,5 +12,6 @@
     <h1>Project Database</h1>
     {%block content%}{%endblock%}
 	<script src="{{url_for('static', filename='main.js')}}"></script>
+  <script src="{{url_for('static', filename='display.js')}}"></script>
   </body>
 </html>
