--- a/Part 4/app/templates/detail.html
+++ b/Part 4/app/templates/detail.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
+
 {% block content %}
+<div class="table-wrapper">
     <table>
         <tr>
             <th>Serial Number</th>
@@ -17,5 +19,6 @@
             {% endfor %}
         </tr>
     </table>
-{% endblock %}
+</div>
 
+{% endblock %}
