--- a/Part 4/app/templates/query.html
+++ b/Part 4/app/templates/query.html
@@ -1,7 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
 <h2>{{database}}</h2>
-
+<script>
+    window.onload = function() {
+        alert("Database connection successful!");
+      };
+</script>
 <div style="text-align:center;">
     <form action="{{ url_for('process_option') }}" method="POST" style="display:inline-block;">
         <label for="option">Please select a query: </label>
